added pagination for showing all messages